--- a/4_paskaita_2pratimas/package.json
+++ b/4_paskaita_2pratimas/package.json
@@ -2,10 +2,12 @@
     "title": "4 paskaita: antras pratimas: dinaminiai linkai",
     "version": "0.1",
     "scripts": {
-        "start": "node index.js"
+        "start": "node index.js",
+        "dev": "nodemon index.js"
     },
     "dependencies": {
         "cors": "^2.8.5",
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "nodemon": "^2.0.22"
     }
 }
